"""
期权交易服务 - 核心期权交易业务逻辑
"""
from typing import Optional, List, Dict, Any
from ..infrastructure.data_access_layer import DataAccessLayer
from ..infrastructure.external_api_adapter import ExternalAPIAdapter
from ..engines.greeks_calculation_engine import GreeksCalculationEngine
from ..config.configuration_manager import ConfigurationManager
from ..models.trading_models import OptionTickData, Position
from ..utils.logger_config import get_logger

class OptionTradingService:
    """
    期权交易服务类
    
    职责：
    - 最优期权选择
    - 期权策略计算
    - 期权交易执行
    - 仓位监控管理
    
    依赖：
    - DataAccessLayer: 数据访问层
    - GreeksCalculationEngine: Greeks计算引擎
    - ExternalAPIAdapter: 外部API适配器
    - ConfigurationManager: 配置管理
    - Logger: 日志记录
    
    原则：
    - 期权交易业务完整性
    - 高内聚设计
    - 领域规则封装
    """
    
    def __init__(self):
        self.data_access: Optional[DataAccessLayer] = None
        self.greeks_engine: Optional[GreeksCalculationEngine] = None
        self.api_adapter: Optional[ExternalAPIAdapter] = None
        self.config: Optional[ConfigurationManager] = None
        self.logger = get_logger(__name__)
    
    def select_optimal_options(self, criteria: Dict[str, Any]) -> List[OptionTickData]:
        """选择最优期权"""
        pass
    
    def calculate_option_strategies(self, options: List[OptionTickData]) -> List[Dict[str, Any]]:
        """计算期权策略"""
        pass
    
    def execute_option_trades(self, strategy: Dict[str, Any]) -> bool:
        """执行期权交易"""
        pass
    
    def monitor_positions(self) -> List[Position]:
        """监控持仓"""
        pass
