"""
风险管理服务 - 核心风险管理业务逻辑
"""
from typing import Optional, List, Dict, Any
from ..infrastructure.data_access_layer import DataAccessLayer
from ..engines.risk_calculation_engine import RiskCalculationEngine
from ..config.configuration_manager import ConfigurationManager
from ..models.trading_models import RiskMetrics, Position, RiskAlert
from ..utils.logger_config import get_logger

class RiskManagementService:
    """
    风险管理服务类
    
    职责：
    - 投资组合风险评估
    - 风险限制执行
    - 风险告警生成
    - VaR计算管理
    
    依赖：
    - DataAccessLayer: 数据访问层
    - RiskCalculationEngine: 风险计算引擎
    - ConfigurationManager: 配置管理
    - Logger: 日志记录
    
    原则：
    - 风险管理业务完整性
    - 高内聚设计
    - 风险规则封装
    """
    
    def __init__(self):
        self.data_access: Optional[DataAccessLayer] = None
        self.risk_engine: Optional[RiskCalculationEngine] = None
        self.config: Optional[ConfigurationManager] = None
        self.logger = get_logger(__name__)
    
    def assess_portfolio_risk(self) -> RiskMetrics:
        """评估投资组合风险"""
        pass
    
    def enforce_risk_limits(self) -> List[str]:
        """执行风险限制"""
        pass
    
    def generate_risk_alerts(self) -> List[RiskAlert]:
        """生成风险告警"""
        pass
    
    def calculate_var(self, confidence_level: float = 0.95) -> float:
        """计算风险价值(VaR)"""
        pass
