"""
风险计算引擎 - VaR和风险模型计算
"""
from typing import Optional, List, Dict, Any
from ..models.trading_models import Position, RiskMetrics
from ..utils.logger_config import get_logger

class RiskCalculationEngine:
    """
    风险计算引擎类
    
    职责：
    - VaR风险价值计算
    - 压力测试模拟
    - 投资组合风险计算
    - 集中度风险评估
    
    依赖：
    - RiskModels: 风险模型
    - MonteCarloEngine: 蒙特卡洛引擎
    - Logger: 日志记录
    
    原则：
    - 风险模型专业化
    - 高精度计算
    - 算法优化
    - 纯数学实现
    """
    
    def __init__(self):
        self.risk_models: Optional[object] = None
        self.monte_carlo: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def calculate_var(self, positions: List[Position], confidence_level: float = 0.95) -> float:
        """计算风险价值(VaR)"""
        pass
    
    def perform_stress_test(self, positions: List[Position], scenarios: List[Dict[str, Any]]) -> Dict[str, float]:
        """执行压力测试"""
        pass
    
    def calculate_portfolio_risk(self, positions: List[Position]) -> RiskMetrics:
        """计算投资组合风险"""
        pass
    
    def assess_concentration_risk(self, positions: List[Position]) -> float:
        """评估集中度风险"""
        pass
