"""
缓存存储库 - 内存缓存和缓存策略实现
"""
from typing import Optional, Dict, Any
from datetime import datetime
from ..utils.logger_config import get_logger

class CacheRepository:
    """
    缓存存储库类
    
    职责：
    - 内存缓存管理
    - 缓存策略实现
    - TTL失效管理
    - 缓存清理维护
    
    依赖：
    - MemoryCache: 内存缓存
    - CacheStrategy: 缓存策略
    - TTLManager: TTL管理器
    - Logger: 日志记录
    
    原则：
    - 缓存策略抽象
    - 性能优化导向
    - 内存管理有效
    """
    
    def __init__(self):
        self.memory_cache: Dict[str, Any] = {}
        self.cache_strategy: Optional[object] = None
        self.ttl_manager: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def set_cache(self, key: str, value: Any, ttl: Optional[int] = None) -> None:
        """设置缓存"""
        pass
    
    def get_cache(self, key: str) -> Optional[Any]:
        """获取缓存"""
        pass
    
    def invalidate_cache(self, pattern: str) -> None:
        """失效缓存"""
        pass
    
    def cleanup_expired(self) -> None:
        """清理过期缓存"""
        pass
