"""
数据访问层 - 数据访问抽象和实现
"""
from typing import Optional, List, Dict, Any
from .cache_repository import CacheRepository
from .external_api_adapter import ExternalAPIAdapter
from ..utils.validation_utility import ValidationUtility
from ..models.trading_models import MarketData, OptionTickData
from ..utils.logger_config import get_logger

class DataAccessLayer:
    """
    数据访问层类
    
    职责：
    - 实时数据获取
    - 历史数据查询
    - 数据持久化
    - 数据完整性验证
    
    依赖：
    - CacheRepository: 缓存存储库
    - ExternalAPIAdapter: 外部API适配器
    - ValidationUtility: 验证工具
    - Logger: 日志记录
    
    原则：
    - 数据访问抽象
    - 技术细节封装
    - 接口统一设计
    """
    
    def __init__(self):
        self.cache_repo: Optional[CacheRepository] = None
        self.api_adapter: Optional[ExternalAPIAdapter] = None
        self.validator: Optional[ValidationUtility] = None
        self.logger = get_logger(__name__)
    
    def get_real_time_data(self, symbols: List[str]) -> List[MarketData]:
        """获取实时数据"""
        pass
    
    def get_historical_data(self, symbol: str, period: str) -> List[MarketData]:
        """获取历史数据"""
        pass
    
    def persist_data(self, data: Any) -> bool:
        """持久化数据"""
        pass
    
    def validate_data_integrity(self, data: Any) -> bool:
        """验证数据完整性"""
        pass
