"""
外部API适配器 - Tiger API和其他外部API适配
"""
from typing import Optional, List, Dict, Any, Callable
from ..models.trading_models import MarketData, OptionTickData
from ..utils.logger_config import get_logger

class ExternalAPIAdapter:
    """
    外部API适配器类
    
    职责：
    - Tiger API适配
    - 第三方数据源集成
    - API限流控制
    - API错误处理
    
    依赖：
    - TigerClient: Tiger证券客户端
    - APIRateLimiter: API限流器
    - RetryHandler: 重试处理器
    - Logger: 日志记录
    
    原则：
    - 外部依赖封装
    - 接口统一抽象
    - 错误处理完善
    """
    
    def __init__(self):
        self.tiger_client: Optional[object] = None
        self.rate_limiter: Optional[object] = None
        self.retry_handler: Optional[object] = None
        self.logger = get_logger(__name__)
    
    def get_market_data(self, symbols: List[str]) -> List[MarketData]:
        """获取市场数据"""
        pass
    
    def get_option_chain(self, symbol: str, expiry: str) -> List[OptionTickData]:
        """获取期权链数据"""
        pass
    
    def place_orders(self, orders: List[Dict[str, Any]]) -> List[Dict[str, Any]]:
        """下单交易"""
        pass
    
    def handle_api_errors(self, error: Exception, context: str) -> Any:
        """处理API错误"""
        pass
