"""
命令行界面 - 参数处理和配置加载
"""
from typing import Optional, Dict, Any
from argparse import ArgumentParser
from ..config.configuration_manager import ConfigurationManager
from ..utils.logger_config import get_logger

class CommandLineInterface:
    """
    命令行界面类
    
    职责：
    - 命令行参数解析
    - 配置文件加载
    - 帮助信息显示
    - 输入参数验证
    
    依赖：
    - ArgumentParser: 参数解析
    - ConfigurationManager: 配置管理
    - Logger: 日志记录
    
    原则：
    - 专注参数处理
    - 无业务逻辑
    - 输入验证
    """
    
    def __init__(self):
        self.argument_parser: Optional[ArgumentParser] = None
        self.config_loader: Optional[ConfigurationManager] = None
        self.logger = get_logger(__name__)
    
    def parse_arguments(self) -> Dict[str, Any]:
        """解析命令行参数"""
        pass
    
    def load_configuration(self) -> Dict[str, Any]:
        """加载配置文件"""
        pass
    
    def display_help(self) -> None:
        """显示帮助信息"""
        pass
    
    def validate_inputs(self) -> bool:
        """验证输入参数"""
        pass
