"""
主应用程序 - 系统启动入口
"""
from typing import Optional
from ..application.trading_orchestrator import TradingOrchestrator
from ..application.system_controller import SystemController
from ..utils.logger_config import get_logger

class MainApplication:
    """
    主应用程序类
    
    职责：
    - 系统启动入口
    - 用户交互界面  
    - 系统状态显示
    - 应用程序生命周期管理
    
    依赖：
    - TradingOrchestrator: 交易流程编排
    - SystemController: 系统控制
    - Logger: 日志记录
    
    原则：
    - 薄层设计，无业务逻辑
    - 纯系统控制和状态展示
    """
    
    def __init__(self):
        self.orchestrator: Optional[TradingOrchestrator] = None
        self.controller: Optional[SystemController] = None
        self.logger = get_logger(__name__)
    
    def main(self) -> None:
        """主程序入口"""
        pass
    
    def initialize_system(self) -> bool:
        """初始化系统"""
        pass
    
    def start_trading(self) -> None:
        """启动交易系统"""
        pass
    
    def shutdown_system(self) -> None:
        """关闭系统"""
        pass
