"""
安全工具 - 安全认证和数据加密
"""
from typing import Optional, Dict, Any

class SecurityUtility:
    """
    安全工具类
    
    职责：
    - 安全认证处理
    - 数据加密解密
    - 访问控制管理
    - 权限验证支持
    
    依赖：
    - EncryptionKey: 加密密钥
    - AuthProvider: 认证提供者
    
    原则：
    - 安全优先设计
    - 无状态实现
    - 加密算法封装
    - 横向工具支持
    """
    
    def __init__(self):
        self.encryption_key: Optional[bytes] = None
        self.auth_provider: Optional[object] = None
    
    def encrypt_data(self, data: str) -> str:
        """加密数据"""
        pass
    
    def decrypt_data(self, encrypted_data: str) -> str:
        """解密数据"""
        pass
    
    def authenticate_user(self, credentials: Dict[str, str]) -> bool:
        """用户认证"""
        pass
    
    def authorize_operation(self, user: str, operation: str) -> bool:
        """操作授权"""
        pass
