"""
验证工具 - 数据验证和业务规则检查
"""
from typing import Optional, List, Dict, Any

class ValidationUtility:
    """
    验证工具类
    
    职责：
    - 数据验证处理
    - 参数检查验证
    - 业务规则验证
    - 模式验证支持
    
    依赖：
    - ValidationRules: 验证规则
    - SchemaValidator: 模式验证器
    
    原则：
    - 无状态设计
    - 可复用验证
    - 类型安全
    - 横向工具支持
    """
    
    def __init__(self):
        self.validation_rules: Optional[Dict[str, Any]] = None
        self.schema_validator: Optional[object] = None
    
    def validate_market_data(self, data: Dict[str, Any]) -> bool:
        """验证市场数据"""
        pass
    
    def validate_trading_params(self, params: Dict[str, Any]) -> bool:
        """验证交易参数"""
        pass
    
    def validate_risk_limits(self, limits: Dict[str, Any]) -> bool:
        """验证风险限制"""
        pass
    
    def check_business_rules(self, data: Dict[str, Any]) -> List[str]:
        """检查业务规则"""
        pass
